--- a/simpleToDo/templates/archives/dashboard.html
+++ b/simpleToDo/templates/archives/dashboard.html
@@ -56,7 +56,7 @@
 
 	<div class="container">
 		<div class="well">
-			<table class="table table-hover table-bordered">
+			<table class="table table-hover">
 				<tr>
 					<td><strong>Sr no.</strong></td>
 					<!--<td><strong>Created</strong></td>-->
