--- a/simpleToDo/templates/index.html
+++ b/simpleToDo/templates/index.html
@@ -21,6 +21,7 @@
 <body>
 	<h1 class="jumbotron">SimpleToDo</h1>
 	<p>Hi there</p>
+	<h4>This page is yet to be designed</h4>
 	<div class="container">
 		<form action="signin" method="POST">
 		{%csrf_token%}
