--- a/simpleToDo/templates/index.html
+++ b/simpleToDo/templates/index.html
@@ -36,10 +36,21 @@
 			<input type="password" name="password" placeholder="Password" required>
 			<button class="btn">SignUp</button>
 		</form>	
-		{% if message %}
-			<p>{{message}}</p>
-		{% endif %}
-
+					{% if messages %}
+						<ul class="messages">
+		    			{% for message in messages %}
+		    				<!--{% if 'success' in message.tags %}
+        						<div class="alert alert-success">
+            						<a class="close" href="#" data-dismiss="alert">×</a>
+            						<strong>Success!</strong>
+                					{{ message }}
+        						</div>
+    						{% endif %}-->
+		    					<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>			
+		    				}
+		    			{% endfor %}
+						</ul>
+					{% endif %}
 		<div style="margin-top:10px">
 		<form action="userDashboard" method="POST">
 			{%csrf_token%}
@@ -61,7 +72,7 @@
 					<button class="btn btn-primary">Add</button>
 				
 			</div>
-		</form>			
+		</form>		
 		</div>
 	</div>-->
 
